k8s-local/argo-rollouts/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  hostnames:
    - rollouts.localhost
  parentRefs:
    - name: external
      namespace: gateway
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
